--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <p class="article-desc">Hola soy un producto</p>
             </div>
         </div>
+        <div class="article add" onclick="addProduct()">
+            <div class="article-image">
+                <span class="material-icons btn-add">add_circle</span>
+            </div>
+        </div>
     </div>
 </body>
 
