--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
         </div>
     </div>
+    <p>Casi listo, falta añadir fecha y hora en tiempo real, además de los mensaje en consola</p>
 </body>
 
 </html>
